--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
@@ -18,13 +18,13 @@
                 "label": "Predicates",
                 "columns":  [
                     {
-                        "value": "property"
+                        "value": "When"
                     },
                     {
-                        "value": "operator"
+                        "value": "Action"
                     },
                     {
-                        "value": "value"
+                        "value": "Do"
                     }
                 ]
             },
