--- a/ui/sections/system/inspectors/alert.reel/alert.html
+++ b/ui/sections/system/inspectors/alert.reel/alert.html
@@ -15,13 +15,10 @@
             }
         },
         "entries": {
-            "prototype": "ui/controls/viewer.reel",
+            "prototype": "./alert-filter.reel",
             "properties": {
                 "element": {"#": "entries"},
                 "displayTitle": "true"
-            },
-            "bindings": {
-                "object": {"<-": "@owner.entries"}
             }
         },
         "settings": {
