--- a/ui/inspectors/services-category.reel/services-category.html
+++ b/ui/inspectors/services-category.reel/services-category.html
@@ -27,6 +27,9 @@
             "properties": {
                 "element": {"#": "services"},
                 "controller": {"@": "controller"}
+            },
+            "bindings": {
+                "isLoading": {"<-": "!@owner.categoryServices || @owner.categoryServices.length == 0"}
             }
         },
         "inspector": {
