Change design from what looks (erroneously) like an allow ACL to the Bind UI it actually is.

--- a/ui/sections/system/inspectors/web-ui.reel/web-ui.html
+++ b/ui/sections/system/inspectors/web-ui.reel/web-ui.html
@@ -67,11 +67,11 @@
             "prototype": "blue-shark/ui/field-multiple-select.reel",
             "properties": {
                 "element": {"#": "AllowAllIPAddress"},
-                "label": "Allow Access IP Address",
+                "label": "Bind IP Address",
                 "labelPath": "this",
                 "isDraggable": true,
-                "inputTitle": "Add Allowed IP Address",
-                "valuesTitle": "Allowed IP Addresses",
+                "inputTitle": "Add Bind IP Address",
+                "valuesTitle": "Bind IP Addresses",
                 "emptyMessage": "No IP addresses allowed"
             },
             "bindings": {
