fixes merge conflicts

--- a/ui/dashboard/notifications.reel/notifications.html
+++ b/ui/dashboard/notifications.reel/notifications.html
@@ -30,7 +30,7 @@
             }
         },
         "itemsScrollview": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "itemsScrollview"},
                 "overflow": "scrollY"
