--- a/ui/dashboard/widget-dropzone.reel/widget-dropzone.html
+++ b/ui/dashboard/widget-dropzone.reel/widget-dropzone.html
@@ -16,7 +16,7 @@
         },
 
         "verticalScroll": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "verticalScroll"},
                 "delegate": {"@": "owner"},
