--- a/ui/drawer.reel/drawer.html
+++ b/ui/drawer.reel/drawer.html
@@ -22,7 +22,7 @@
             }
         },
         "horizontalScroll": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "horizontalScroll"},
                 "overflow": "scrollX"
