--- a/ui/inspectors/calendar.reel/calendar-widget.reel/day-view.reel/day-view.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/day-view.reel/day-view.html
@@ -65,7 +65,7 @@
             }
         },
         "scrollview": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "scrollview"},
                 "overflow": "scrollY"
