--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -155,9 +155,7 @@
                         <div data-arg="calendar" data-montage-id="calendar"></div>
                         <div data-arg="wizard" data-montage-id="wizard"></div>
                     </div>
-                    <div data-arg="new" class="Main-cascadingListWrapper">
-                        <div data-montage-id="cascadingList"></div>
-                    </div>
+                    <div data-arg="new" data-montage-id="cascadingList"></div>
                 </div>
                 <div data-montage-id="sideboard" class="Main-sideboard"></div>
             </div>
