--- a/ui/sections/network/inspectors/overview.reel/overview.html
+++ b/ui/sections/network/inspectors/overview.reel/overview.html
@@ -11,7 +11,7 @@
             }
         },
         "scrollView": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "scrollView"},
                 "overflow": "scrollY"
