--- a/ui/sections/storage/inspectors/overview.reel/overview.html
+++ b/ui/sections/storage/inspectors/overview.reel/overview.html
@@ -24,7 +24,7 @@
             }
         },
         "scrollView": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "scrollView"},
                 "overflow": "scrollY"
