--- a/ui/controls/cascading-list.reel/cascading-list.html
+++ b/ui/controls/cascading-list.reel/cascading-list.html
@@ -32,10 +32,9 @@
             }
         },
         "horizontalScroll": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "horizontalScroll"},
-                "overflow": "scrollX",
                 "minHeight": true
             }
         }
@@ -44,7 +43,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="CascadingList">
-        <div data-montage-id="horizontalScroll">
+        <div data-montage-id="horizontalScroll" CascadingList>
             <div data-montage-id="repetition" class="CascadingList-repetition">
                 <div data-montage-id="item"></div>
             </div>
