--- a/ui/controls/tree-view.reel/current-node.reel/current-node.html
+++ b/ui/controls/tree-view.reel/current-node.reel/current-node.html
@@ -31,7 +31,7 @@
             }
         },
         "scrollview": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "scrollview"},
                 "overflow": "scrollY",
