--- a/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list.html
+++ b/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list.html
@@ -42,7 +42,7 @@
             }
         },
         "scrollview": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "scrollview"},
                 "overflow": "scrollY"
