--- a/ui/sections/accounts/inspectors/overview.reel/overview.html
+++ b/ui/sections/accounts/inspectors/overview.reel/overview.html
@@ -10,7 +10,7 @@
                 }
             },
             "scrollView": {
-                "prototype": "blue-shark/ui/scrollview.reel",
+                "prototype": "blue-shark/ui/scroller.reel",
                 "properties": {
                     "element": {"#": "scrollView"},
                     "overflow": "scrollY"
