--- a/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/disks-category.html
+++ b/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/disks-category.html
@@ -42,7 +42,7 @@
             }
         },
         "scrollview": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "scrollview"},
                 "overflow": "scrollY"
