--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine-readme.reel/virtual-machine-readme.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine-readme.reel/virtual-machine-readme.html
@@ -20,7 +20,7 @@
             }
         },
         "scrollView": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "scrollView"},
                 "overflow": "scrollY"
