--- a/ui/widgets/system-info.reel/system-info.html
+++ b/ui/widgets/system-info.reel/system-info.html
@@ -238,7 +238,7 @@
             }
         },
         "scrollview": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+            "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
                 "element": {"#": "scrollview"},
                 "overflow": "scrollY"
