--- a/ui/controls/cascading-list.reel/cascading-list.html
+++ b/ui/controls/cascading-list.reel/cascading-list.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="CascadingList">
-        <div data-montage-id="horizontalScroll" CascadingList>
+        <div data-montage-id="horizontalScroll">
             <div data-montage-id="repetition" class="CascadingList-repetition">
                 <div data-montage-id="item"></div>
             </div>
