--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -316,7 +316,7 @@
             <div data-montage-id="image" class="g-margin-bottom"></div>
             <div data-montage-id="name"></div>
             <div data-montage-id="dockerHost"></div>
-            <div data-montage-id="readme"></div>
+            <div data-montage-id="readme" class="g-margin-bottom"></div>
 
             <div data-montage-id="advancedSection">
                 <div data-montage-id="hostname"></div>
