Fix lock and refresh of boot environments
Ticket: #20685

--- a/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/task-notification.html
+++ b/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/task-notification.html
@@ -15,7 +15,7 @@
                 }
             },
             "bindings": {
-                "classList.has('has-error')": {"<-": "@owner.object.state == 'FAILED'"},
+                "classList.has('has-error')": {"<-": "@owner.object.state == 'FAILED' || @owner.object.state == 'ABORTED'"},
                 "classList.has('has-warning')": {"<-": "@owner.object.warnings.length > 0"},
                 "classList.has('has-success')": {"<-": "@owner.object.state == 'FINISHED'"},
                 "classList.has('is-expired')": {"<-": "@owner.isExpired"},
