--- a/ui/sections/system/inspectors/boot-pool.reel/boot-environment-table.reel/boot-environment-table.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-environment-table.reel/boot-environment-table.html
@@ -46,7 +46,8 @@
                 "element": {"#": "rowEntry"}
             },
             "bindings": {
-                "object": {"<-": "@table:rowIteration.object.object"}
+                "object": {"<-": "@table:rowIteration.object.object"},
+                "service": {"<-": "@owner.service"}
             }
         },
 
