styling and layout on alert-filter

--- a/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
+++ b/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-
+    <link rel="stylesheet" href="alert-filter.css">
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -47,7 +47,7 @@
 <body>
     <div data-montage-id="owner" class="AlertFilter">
         <div data-montage-id="inspector">
-            <div data-montage-id="table"></div>
+            <div data-montage-id="table" class="AlertFilter-table"></div>
         </div>
     </div>
 </body>
