--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
@@ -15,16 +15,16 @@
             "properties": {
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
-                "label": "Predicates",
+                "label": "Alert Notifications",
                 "columns":  [
                     {
-                        "value": "When"
+                        "value": "Event"
                     },
                     {
                         "value": "Action"
                     },
                     {
-                        "value": "Do"
+                        "value": "Recipients"
                     }
                 ]
             },
