--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
@@ -27,28 +27,34 @@
             }
         },
         "sendTo": {
-            "prototype": "blue-shark/ui/field-multiple-select.reel",
+            "prototype": "blue-shark/ui/multiple-select.reel",
             "properties": {
                 "element": {"#": "addresses"},
                 "label": "To",
                 "labelPath": "this",
-                "isDraggable": true,
                 "inputTitle": "Add a recipient",
                 "valuesTitle": "Recipients",
-                "placeholder": "eg. foo@example.com"
+                "placeholder": "eg. foo@example.com",
+                "emptyMessage": "no emails added",
+                "hideTitle": true,
+                "valuesHeight": 4
             },
             "bindings": {
                 "values": {"<->": "@owner.object.parameters.addresses"}
-            }        
+            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="TableRowPredicate Table-cells">
-        <div><div data-montage-id="classValues"></div></div>
+        <div>
+            <div data-montage-id="classValues"></div>
+        </div>
         <div data-montage-id="emitter"></div>
-        <div data-montage-id="addresses" class="Select-value"></div>
+        <div>
+            <div data-montage-id="addresses" class="Select-value flush-bottom"></div>
+        </div>
     </div>
 </body>
 </html>
