adds title to Alerts Reporting inspector and removes unused

--- a/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
+++ b/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
@@ -25,7 +25,8 @@
                 "validationController": {"@": "validationController"},
                 "canDelete": true,
                 "canSave": true,
-                "canRevert": true
+                "canRevert": true,
+                "title": "Alerts & Reporting"
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
