--- a/ui/sections/system/inspectors/alert.reel/alert.html
+++ b/ui/sections/system/inspectors/alert.reel/alert.html
@@ -17,8 +17,7 @@
         "entries": {
             "prototype": "./alert-filter.reel",
             "properties": {
-                "element": {"#": "entries"},
-                "displayTitle": "true"
+                "element": {"#": "entries"}
             }
         },
         "settings": {
@@ -34,7 +33,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="Alert">
-        <div data-montage-id="entries" class="SectionRoot-entries"></div>
+        <div data-montage-id="entries"></div>
         <div data-montage-id="settings"></div>
     </div>
 </body>
