UPDATED: change property to clazz

--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
@@ -16,7 +16,7 @@
             },
             "bindings": {
                 "options" : {"<-": "@owner.classValues"},
-                "selectedValue": {"<->": "@owner.object.class"}
+                "selectedValue": {"<->": "@owner.object.clazz"}
             }
         },
         "emitter": {
