ADDED: binding check

--- a/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate-import.reel/crypto-certificate-import.html
+++ b/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate-import.reel/crypto-certificate-import.html
@@ -8,6 +8,9 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
+            },
+            "bindings": {
+                "isSaveDisabled": {"<-": "(!@owner.certificateFile || !@owner.privateKeyFile)"}
             }
         },
         "certificate": {
