--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
@@ -16,6 +16,7 @@
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
                 "label": "Alert Notifications",
+                "contentMaxHeight": 17,
                 "columns":  [
                     {
                         "value": "Event"
