Only hide erase button for disks in imported volumes (not exported)
Ticket: #21128

--- a/ui/sections/storage/inspectors/disk.reel/disk.html
+++ b/ui/sections/storage/inspectors/disk.reel/disk.html
@@ -231,7 +231,7 @@
                 "value": "Erase"
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "!!@owner.object._allocation"}
+                "classList.has('hide')": {"<-": "@owner.object._allocation.type == 'VOLUME'"}
             }
         },
         "onlineButtonSubstitution":{
